# Colours

./: pyproject.toml
src/ColourLog/: __init__.py  colorize.py
src/colours/: __init__.py  colorize.py
tests/: test_colorize.py
