[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "colours"
dynamic = ["version"]
authors = [
  { name="Edel Perez", email="edel.perez@outlook.com" },
]
description = "Makes logging to the terminal easy and pretty."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EdelPerez/Colours"
"Bug Tracker" = "https://github.com/EdelPerez/Colours/issues"

[tool.setuptools.dynamic]
version = {attr = "colours.__init__.VERSION"}